[gd_scene load_steps=8 format=3 uid="uid://xavarq63temb"]

[ext_resource type="Script" path="res://gameplay/snake.gd" id="1_ue2nh"]
[ext_resource type="Texture2D" uid="uid://b0mi4ntrn7jv2" path="res://gameplay/snake.png" id="2_ta2v3"]
[ext_resource type="AudioStream" uid="uid://bwpuv10x1bcht" path="res://gameplay/eat.wav" id="3_8dunr"]
[ext_resource type="AudioStream" uid="uid://kbpr34jc6hmn" path="res://gameplay/turn.wav" id="4_kis8j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nyig1"]
size = Vector2(2, 2)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_aeflb"]
streams_count = 1
random_volume_offset_db = 0.0
stream_0/stream = ExtResource("3_8dunr")
stream_0/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_qhqt0"]
streams_count = 1
random_volume_offset_db = 0.0
stream_0/stream = ExtResource("4_kis8j")
stream_0/weight = 1.0

[node name="Snake" type="Area2D" groups=["snake"]]
collision_mask = 0
script = ExtResource("1_ue2nh")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Head" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head"]
shape = SubResource("RectangleShape2D_nyig1")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_ta2v3")
hframes = 2
vframes = 2

[node name="EatSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_aeflb")
bus = &"SFX"

[node name="TurnSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_qhqt0")
bus = &"SFX"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Head" to="." method="_on_head_area_entered"]
